# ml-engineer-challenge

./: .dockerignore  .gitignore  Dockerfile  README.md  app.yaml  cloudbuild.yaml  db.sqlite3  docker-compose.yml  main.py  pyproject.toml  tree.txt
.github/workflows/: django-ci.yml
apps/documents/: apps.py  health.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py
apps/processing/management/commands/: process_documents.py
config/: asgi.py  settings.py  urls.py  wsgi.py
db/5a30190d-0735-485a-8ead-ac5c3e654508/: index_metadata.pickle
deployment/: Dockerfile  docker-compose.yml  docker_run.sh
ml_pipeline/dataset/: generator.py  test_generator.py  utils.py
ml_pipeline/entity_extractor/: extractor.py  test_extractor.py
ml_pipeline/ocr/: base.py  google_cloud_vision.py  pipeline.py  preprocessor.py  tesseract.py
services/: logger.py
tests/: test_entity_extractor.py  test_text_dataset_generator.py
