[project]
name = "health-care-document-processing-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.0",
    "pillow>=11.3.0",
    "pytesseract>=0.3.13",
    "numpy>=1.24.0",
    "google-cloud-vision>=3.4.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pdf2image>=1.17.0",
    "gunicorn>=21.2.0",
    "torch==2.6.0",
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp310-cp310-linux_x86_64.whl"
]